--- a/swing-note/index.html
+++ b/swing-note/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="./src/img/noteIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/style.css" />
-    <script type="module" src="/src/main.ts"></script>
+    <script defer type="module" src="/src/main.ts"></script>
   </head>
 
   <title>Swing Note</title>
